# TextRPG-LLM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
config/: llm.toml
data/: config.json  game_records.example.json  game_state.json  start_art_4x3.txt
src/NPC/: NPCManager.cpp  NPCManager.hpp
src/NPC/upstream/NPC_/: NPCManager.hpp
src/app/: CliView.cpp  CliView.hpp  SoundManager.hpp  TextRpgApp.cpp  TextRpgApp.hpp
src/combat/: CombatResolver.cpp  CombatResolver.hpp  CombatSystem.cpp  CombatSystem.hpp  CombatTypes.hpp
src/game/: Consumable.cpp  Consumable.hpp  DangerSystem.cpp  DangerSystem.hpp  Equipment.cpp  Equipment.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  QuestItem.cpp  QuestItem.hpp
src/llm/: ContextBuilder.cpp  ContextBuilder.hpp  ILLMClient.hpp  LLM.cpp  LLM.hpp  LLMConfig.cpp  LLMConfig.hpp  LLMEngineInternals.hpp  LLMEventValidator.cpp  LLMEventValidator.hpp  LLMFallbackFactory.cpp  LLMFallbackFactory.hpp  LLMLogger.cpp  LLMLogger.hpp  LLMOutputParser.cpp  LLMOutputParser.hpp  LLMRequest.hpp  LLMResponse.hpp  LLMService.cpp  LLMService.hpp  LLMTypes.hpp  OllamaChatClient.cpp  OllamaChatClient.hpp  OllamaClient.cpp  OllamaClient.hpp  OpenAIChatClient.cpp  OpenAIChatClient.hpp  PromptBuilder.cpp  PromptBuilder.hpp  RagContext.cpp  RagContext.hpp  RecordStore.cpp  RecordStore.hpp  ResponseParser.cpp  ResponseParser.hpp  StateApplier.cpp  StateApplier.hpp
tests/: test_llm_engine.cpp  test_llm_module.cpp
